# ray-tracer

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs  main.rs  utility.rs
src/color/: mod.rs
src/libcore/: camera.rs  hit.rs  hittable_list.rs  mod.rs
src/libcore/material/: dielectric.rs  lambertian.rs  metallic.rs  mod.rs
src/math/: hit.rs  hittable_list.rs  mod.rs  ray.rs  sphere.rs  vec3.rs
